--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,3 +5,21 @@ button {
     padding: 10px 20px;
 } 
 
+header {
+    padding: 15px 20px;
+}
+
+header p {
+    float: right;
+}
+
+main {
+    width:75%;
+    margin: 20px auto;
+}
+
+button {
+    margin: 5px 5px 0 5px;
+}
+
+
